More WED polygon editing features